<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/bold_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/mandi"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/seller_name_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/secondary_text_style"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/seller_name" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/seller_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_white_round"
                android:hint="@string/ex_seller_1"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loyalty_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/secondary_text_style"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/seller_loyalty" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/loyalty_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white_round"
                android:hint="@string/ex_loyalty_1"
                android:layout_marginBottom="20dp"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/village_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_marginTop="20dp"
                style="@style/secondary_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/village" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_white_round">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/village_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    app:layout_constraintTop_toTopOf="parent" />
                android:entries="@array/villages"

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:src="@drawable/ic_down_arrow"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/village_sp"
                    app:layout_constraintEnd_toEndOf="@id/village_sp"
                    app:layout_constraintTop_toTopOf="@id/village_sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/crop_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_marginTop="20dp"
                style="@style/secondary_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/crop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_white_round">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/crop_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:src="@drawable/ic_down_arrow"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/crop_sp"
                    app:layout_constraintEnd_toEndOf="@id/crop_sp"
                    app:layout_constraintTop_toTopOf="@id/crop_sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_light_green"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_marginTop="20dp"
                style="@style/secondary_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/gross_weight" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white_round">

                <EditText
                    android:id="@+id/weight_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_round"
                    android:hint="@string/ex_weight"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toStartOf="@id/unit_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/unit_sp"
                    style="@style/bold_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="13dp"
                    android:entries="@array/unit"
                    app:layout_constraintBottom_toBottomOf="@id/weight_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/weight_et" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp">

            <TextView
                style="@style/bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gross_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_amount_tv"
                style="@style/bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="--"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loyalty_tv"
                style="@style/secondary_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/applied_loyalty_index"
                android:textColor="@color/dark_green"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_amount_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sell_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/dark_green"
            android:padding="14dp"
            android:text="@string/sell_my_product"
            app:cornerRadius="8dp" />
        <TextView
            android:id="@+id/clear_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="130dp"
            android:padding="14dp"
            android:text="@string/clear"
            app:cornerRadius="8dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>